--- a/startvote/templates/index.html
+++ b/startvote/templates/index.html
@@ -43,7 +43,7 @@
         <ul class="nav navbar-nav" data-0="margin-top:20px;" data-300="margin-top:5px;">
           <li class="active"><a href="">Home</a></li>
           <li><a href="#section-about">About</a></li>
-          <li><a href="#section-about">Sign in&nbsp&nbsp<i class="fa fa-sign-in fa-lg"></i></a></li>
+          <li><a href="{% url 'login' %}">Sign in&nbsp&nbsp<i class="fa fa-sign-in fa-lg"></i></a></li>
 
         </ul>
       </div>
