--- a/startvote/templates/index.html
+++ b/startvote/templates/index.html
@@ -53,7 +53,7 @@
 
   <section class="featured">
     <div class="container">
-      <div class="row mar-bot40">
+      <div class="row mar-bot25">
         <div class="col-md-6 col-md-offset-3">
 
           <div class="align-center">
@@ -66,6 +66,10 @@
               Lorem ipsum dolor sit amet, natum bonorum expetendis usu ut. Eum impetus offendit disputationi eu, at vim aliquip lucilius praesent. Alia laudem antiopam te ius, sed ad munere integre, ubique facete sapientem nam ut.
 
             </p>
+              <a href="{% url 'form' %}"><button  type="button"  class="btn btn-primary btn-lg" style="margin-top:20px;box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .14), 0 3px 3px -2px rgba(0, 0, 0, .2), 0 1px 8px 0 rgba(0, 0, 0, .12)">
+                  Start a Vote!</button></a>
+
+
           </div>
         </div>
       </div>
