--- a/startvote/templates/login.html
+++ b/startvote/templates/login.html
@@ -8,11 +8,11 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <style type="text/css">
 	body {
 		color: #fff;
-		background: #3598dc;
+		background: #65B0A7;
 	}
 	.form-control {
 		min-height: 41px;
@@ -23,7 +23,7 @@
 	.form-control:focus {
 		background: #e2e2e2;
 	}
-	.form-control, .btn {        
+	.form-control, .btn {
         border-radius: 2px;
     }
 	.login-form {
@@ -42,10 +42,10 @@
         box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
         padding: 30px;
     }
-    .login-form .btn {        
+    .login-form .btn {
         font-size: 16px;
         font-weight: bold;
-		background: #3598dc;
+		background: #65B0A7;
 		border: none;
         outline: none !important;
     }
@@ -68,16 +68,16 @@
 	}
 </style>
 </head>
-<body>
-<div class="login-form">
+<body >
+<div class="login-form" style="top:20%;left:37.5%;position: absolute;">
     <form action="/examples/actions/confirmation.php" method="post">
-        <h2 class="text-center">Login</h2>   
+        <h2 class="text-center">Login</h2>
         <div class="form-group has-error">
         	<input type="text" class="form-control" name="username" placeholder="Username" required="required">
         </div>
 		<div class="form-group">
             <input type="password" class="form-control" name="password" placeholder="Password" required="required">
-        </div>        
+        </div>
         <div class="form-group">
             <button type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
         </div>
@@ -86,4 +86,4 @@
     <p class="text-center small">Don't have an account? <a href="#">Sign up here!</a></p>
 </div>
 </body>
-</html>                            
+</html>
