--- a/startvote/templates/form.html
+++ b/startvote/templates/form.html
@@ -17,10 +17,7 @@
             color: #fff;
             background: #65B0A7;
             height: 100%;
-
             background-size:100% 100%;
-
-            background-attachment: fixed;
         }
     </style>
 </head>
@@ -39,7 +36,7 @@
     <div class="main-content">
 
         <!-- You only need this form and the form-basic.css -->
-        <div class="card">
+
         <form class="form-basic" method="post" action="#">
 
             <div class="form-title-row">
@@ -119,10 +116,16 @@
             </div>
 
             </form>
-         </div>
+       
 
     </div>
+<div class="card" style="width: 20rem;margin-top: 300px">
+  <div class="card-body">
+    <h4 class="card-title"></h4>
+    <p class="card-text">&nbsp</p>
 
+  </div>
+</div>
 
 </body>
 
