--- a/startvote/static/assets/form-basic.css
+++ b/startvote/static/assets/form-basic.css
@@ -108,7 +108,7 @@ html{
 }
 
 .form-basic button{
-    display: block;
+    /*display: block;*/
     border-radius: 2px;
     background-color:  #6caee0;
     color: #ffffff;
