--- a/startvote/templates/login.html
+++ b/startvote/templates/login.html
@@ -79,11 +79,12 @@
             <input type="password" class="form-control" name="password" placeholder="Password" required="required">
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
+            <a href="{% url 'card' %}">
+            <button type="button" class="btn btn-primary btn-lg btn-block">Sign in</button></a>
         </div>
-        <p><a href="#">Lost your Password?</a></p>
+        <p><a href="{% url 'index' %}">Lost your Password?</a></p>
     </form>
-    <p class="text-center small">Don't have an account? <a href="#">Sign up here!</a></p>
+    <p class="text-center small">Don't have an account? <a href="{% url 'index' %}">Sign up here!</a></p>
 </div>
 </body>
 </html>
