--- a/startvote/templates/index.html
+++ b/startvote/templates/index.html
@@ -164,7 +164,7 @@
             <figure class="member-photo"><img src="/static/img/team/member2.jpg" alt="" /></figure>
             <div class="team-detail">
               <h4>Jeremy Zhang</h4>
-              <span>Background developer</span>
+              <span>Background Developer</span>
             </div>
           </div>
         </div>
@@ -173,7 +173,7 @@
             <figure class="member-photo"><img src="/static/img/team/member3.jpg" alt="" /></figure>
             <div class="team-detail">
               <h4>Yue Leng</h4>
-              <span>Web designer</span>
+              <span>Web Designer</span>
             </div>
           </div>
         </div>
@@ -182,7 +182,7 @@
             <figure class="member-photo"><img src="/static/img/team/member4.jpg" alt="" /></figure>
             <div class="team-detail">
               <h4>Chuang Yang</h4>
-              <span>Web developer</span>
+              <span>Web Developer</span>
             </div>
           </div>
         </div>
@@ -191,7 +191,7 @@
             <figure class="member-photo"><img src="/static/img/team/member5.jpg" alt="" /></figure>
             <div class="team-detail">
               <h4>Mark Zeng</h4>
-              <span>Requirement developer</span>
+              <span>Requirement Developer</span>
             </div>
           </div>
         </div>
