--- a/startvote/static/css/style.css
+++ b/startvote/static/css/style.css
@@ -602,13 +602,14 @@ About
 
 .member-photo {
 	box-sizing:border-box;
+    max-width : 80%;
 	-webkit-border-radius:50%;
 		-moz-border-radius:50%;
 			border-radius:50%;	
-	margin: 0 0 20px 0;
+	margin: 0 auto 20px auto;
 }
 .member-photo img {
-	width : 80%;
+    width : 100%;
 	-webkit-border-radius:50%;
 		-moz-border-radius:50%;
 			border-radius:50%;	
