--- a/startvote/templates/login.html
+++ b/startvote/templates/login.html
@@ -82,6 +82,8 @@
         <div class="form-group">
             <button type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
         </div>
+{#        <div class="error btns login-form-tips" id="jsLoginTips">{{ msg }}#}
+{#        </div> #}
         <p><a href="{% url 'index' %}">Lost your Password?</a></p>
     </form>
     <p class="text-center small">Don't have an account? <a href="{% url 'index' %}">Sign up here!</a></p>
