--- a/startvote/templates/fold_demo.html
+++ b/startvote/templates/fold_demo.html
@@ -34,7 +34,7 @@
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading">{{c.title}}</h4>
-                        {{c.content}}
+                        <pre>{{c.content}}</pre>
                     </div>
                 </div>
 		    </div>
