--- a/startvote/templates/form.html
+++ b/startvote/templates/form.html
@@ -83,7 +83,7 @@
 {#  </div>#}
 {#</div>#}
 
-    <div style="margin-left: 65%">
+{#    <div class = "main">#}
 
         <!-- You only need this form and the form-basic.css -->
 
@@ -168,30 +168,10 @@
 
 
 
-    </div>
-<div style="margin-right: 65%; margin-top: 10%">
-<div class="container">
-	<div class="row">
-        <div class="control-group" id="fields">
-            <label class="control-label" for="field1">Nice Multiple Form Fields</label>
-            <div class="controls">
-                <form role="form" autocomplete="off">
-                    <div class="entry input-group col-xs-3">
-                        <input class="form-control" name="fields[]" type="text" placeholder="Type something" />
-                    	<span class="input-group-btn">
-                            <button class="btn btn-success btn-add" type="button">
-                                <span class="glyphicon glyphicon-plus"></span>
-                            </button>
-                        </span>
-                    </div>
-                </form>
-            <br>
-            <small>Press <span class="glyphicon glyphicon-plus gs"></span> to add another form field :)</small>
-            </div>
-        </div>
-	</div>
-</div>
- </div>
+
+
+
+
 <div class="card" style="width: 20rem;margin-top: 300px">
   <div class="card-body">
     <h4 class="card-title"></h4>
